--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,15 @@
     <meta name="description" content="Web site using react-app" />
     <link rel="manifest" href="./manifest.json" />
     <title>React Booking App</title>
+    <style>
+      * {
+        box-sizing: border-box;
+      }
+      body {
+        margin: 0;
+        padding: 0;
+      }
+    </style>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
