--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,12 @@
       body {
         margin: 0;
         padding: 0;
+        overflow-x: hidden;
+      }
+      .link {
+        text-decoration: none;
+        color: inherit;
+        /* 3 */
       }
     </style>
   </head>
