--- a/public/index.html
+++ b/public/index.html
@@ -12,19 +12,9 @@
       * {
         box-sizing: border-box;
       }
-      body {
-        margin: 0;
-        padding: 0;
-        overflow-x: hidden;
-      }
-      .link {
-        text-decoration: none;
-        color: inherit;
-        /* 3 */
-      }
     </style>
   </head>
-  <body>
+  <body class="m-0 p-0 overflow-x-hidden">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
   </body>
